<resources>
    <!--login screen-->
    <string name="app_name">Power Plates</string>
    <string name="app_logo">Power Plates logo</string>
    <string name="login_screen">LoginScreen</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button">Log In or Sign Up</string>
    <string name="userPasswdKV">com.cs407.powerplates.userPasswdKV</string>
    <string name="userLevelKV">com.cs407.powerplates.userLevelKV</string>
    <string name="fail_login">Wrong Username or Password</string>

    <!--experience level-->
    <string name="workout_database">workoutDatabase</string>
    <string name="choice_level_screen">Choice Level</string>

    <!--rank preferences-->
    <string name="rank_prefs">Rank Prefs</string>
    <string name="rank_prefs_greeting">Rank Your Preferences:</string>

    <!--workout_layout.xml-->
    <string name="card_exercise_name">exercise name</string>
    <string name="card_musclegrp">muscleGrp</string>
    <string name="card_level">level</string>

    <!--fragment_workout_content.xml-->
    <string name="exercise_name">exercise name</string>
    <string name="musclegrp">muscleGrp</string>
    <string name="level">level</string>

    <!--miscellaneous / multi-use-->
    <string name="greeting_text">Welcome %1$s!</string>
    <string name="logout">Logout</string>
    <string name="exercise_database">exerciseDatabase</string>
    <string name="choose_workout">Choose your workouts</string>
    <string name="about_workout">Workout information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stopwatch">Stopwatch</string>


    <string name="workout_details">%1$s\n• Level: %2$s\n• %3$s reps each set</string>
    <string name="workout_details_no_reps">%1$s\n• Level: %2$s\n• %3$s</string>
    <string name="workout_details_push_to_fail">%1$s\n• Level: %2$s\n• Push until Fatigue</string>


    <!-- checkbox strings -->
    <string name="checkBox1">Coding contests</string>
    <string name="checkBox2_text">Civil Engineering Courses</string>
    <string name="checkBox1_text">Coding Contests</string>
    <string name="checkBox3_text">Computer Science Courses</string>
    <string name="checkBox4_text">Company specific coding questions</string>
    <string name="checkBox5_text">Download movies</string>
    <string name="history">History</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="workout_history">Workout History</string>
    <string name="exercise_name_1">exercise_name_1</string>
    <string name="exercise_name_2">exercise_name_2</string>
    <string name="exercise_name_3">exercise_name_3</string>
    <string name="category_workout_on_date">Category Workout on Date</string>
    <string name="start">Start</string>
    <string name="your_workout_statistics">Your Workout Statistics</string>
    <string name="category">Category</string>
    <string name="workouts_done"># Workouts Done</string>
    <string name="top_exercise">Top Exercise</string>
    <string name="card_category">Category</string>
    <string name="card_workouts_done"># Workouts Done</string>
    <string name="card_top_exercise">Top Exercise</string>


</resources>